@startuml
!pragma layout smetana

title <AddSongToPlaylistActivity> Class Diagram

AddSongToPlaylistActivity o-- PlaylistDao

class AddSongToPlaylistActivity implements RequestHandler {
    - log: Logger
    - playlistDao: PlaylistDao
    - albumTrackDao: AlbumTrackDao

    + handleRequest(addSongToPlaylistRequest: AddSongToPlaylistRequest, context: Context): AddSongToPlaylistResult
}

AddSongToPlaylistActivity o-- AlbumTrackDao
AddSongToPlaylistActivity .o Logger
AddSongToPlaylistActivity ..|> RequestHandler

class AlbumTrackNotFoundException extends RuntimeException {
}
class PlaylistNotFoundException extends RuntimeException {
}

PlaylistNotFoundException <|-- AddSongToPlaylistActivity
AlbumTrackNotFoundException <|-- AddSongToPlaylistActivity

class PlaylistDao {
    - dynamoDbMapper: DynamoDBMapper

    + getPlaylist(id: String): Playlist
}

class AlbumTrackDao {
    - dynamoDbMapper: DynamoDBMapper
}

PlaylistDao ..o DynamoDBMapper
AlbumTrackDao ..o DynamoDBMapper

@enduml


                        newpage



@startuml
!pragma layout smetana

title <CreatePlaylistActivity> Class Diagram

CreatePlaylistActivity ..o Logger

class CreatePlaylistActivity implements RequestHandler {
    - log: Logger
    - playlistDao: PlaylistDao

    + handleRequest(createPlaylistRequest: CreatePlaylistRequest, context: Context): CreatePlaylistResult
}

CreatePlaylistActivity o-- PlaylistDao
CreatePlaylistActivity ..|> RequestHandler

class InvalidAttributeValueException extends InvalidAttributeException {
}

class InvalidAttributeException extends RuntimeException {
}

InvalidAttributeValueException <|-- CreatePlaylistActivity

class PlaylistDao {
    - dynamoDbMapper: DynamoDBMapper

    + getPlaylist(id: String): Playlist
}

PlaylistDao ..o DynamoDBMapper

@enduml



                        newpage



@startuml
!pragma layout smetana

title <GetPlaylistActivity> Class Diagram

GetPlaylistActivity ..o Logger

class GetPlaylistActivity implements RequestHandler {
    - log: Logger
    - playlistDao: PlaylistDao

    + handleRequest(getPlaylistRequest: GetPlaylistRequest, context: Context): GetPlaylistResult
}

GetPlaylistActivity o-- PlaylistDao
GetPlaylistActivity ..|> RequestHandler

class PlaylistNotFoundException extends RuntimeException {
}

PlaylistNotFoundException <|-- GetPlaylistActivity

class PlaylistDao {
    - dynamoDbMapper: DynamoDBMapper

    + getPlaylist(id: String): Playlist
}

PlaylistDao ..o DynamoDBMapper

@enduml



                        newpage



@startuml
!pragma layout smetana

title <GetPlaylistSongsActivity> Class Diagram

GetPlaylistSongsActivity ..o Logger

class GetPlaylistSongsActivity implements RequestHandler {
    - log: Logger
    - playlistDao: PlaylistDao

    + handleRequest(getPlaylistSongsRequest: GetPlaylistSongsRequest, context: Context): GetPlaylistSongsResult
}

GetPlaylistSongsActivity o-- PlaylistDao
GetPlaylistSongsActivity ..|> RequestHandler

class PlaylistNotFoundException extends RuntimeException {
}

PlaylistNotFoundException <|-- GetPlaylistSongsActivity

class PlaylistDao {
    - dynamoDbMapper: DynamoDBMapper

    + getPlaylist(id: String): Playlist
}

PlaylistDao ..o DynamoDBMapper

@enduml



                        newpage



@startuml
!pragma layout smetana

title <UpdatePlaylistActivity> Class Diagram

UpdatePlaylistActivity ..o Logger

class UpdatePlaylistActivity implements RequestHandler {
    - log: Logger
    - playlistDao: PlaylistDao

    + handleRequest(updatePlaylistRequest: UpdatePlaylistRequest, context: Context): UpdatePlaylistResult
}

UpdatePlaylistActivity o-- PlaylistDao
UpdatePlaylistActivity ..|> RequestHandler

class PlaylistNotFoundException extends RuntimeException {
}
class InvalidAttributeValueException extends InvalidAttributeException {
}
class InvalidAttributeChangeException extends InvalidAttributeException {
}
class InvalidAttributeException extends RuntimeException {
}

PlaylistNotFoundException <|-- UpdatePlaylistActivity
InvalidAttributeValueException <|-- UpdatePlaylistActivity
InvalidAttributeChangeException <|-- UpdatePlaylistActivity
InvalidAttributeChangeException --|> InvalidAttributeException
InvalidAttributeValueException --|> InvalidAttributeException

class PlaylistDao {
    - dynamoDbMapper: DynamoDBMapper

    + getPlaylist(id: String): Playlist
}

PlaylistDao ..o DynamoDBMapper

@enduml



                        newpage



@startuml
!pragma layout smetana

title <AlbumTrack> & <Playlist> Class Diagram

class AlbumTrack {
    - @DynamoDBHashKey asin: String
    - @DynamoDBRangeKey trackNumber: Integer
    - albumName: String
    - songTitle: String

    + getAsin(): String
    + getTrackNumber(): Integer
    + getAlbumName(): String
    + getSongTitle(): String
}

class Playlist {
    - @DynamoDBHashKey id: String
    - name: String
    - customerId: String
    - songCount: Integer
    - tags: Set<String>
    - songList: List<AlbumTrack>

    + getAsin(): String
    + getName(): String
    + getCustomerId(): String
    + getSongCount(): Integer
    + getTags(): Set<String>
    + getSongList(): List<AlbumTrack>
}

Playlist *-- AlbumTrack

@enduml